feat: creating register vote route
