# backend/src/domain/usecases/register-vote/register-vote.dto.js
@@ -1,6 +1,20 @@
-class InputRegisterVoteDTO { };
+class InputRegisterVoteDTO {
+  constructor({ participantId }) {
+    this.participantId = participantId;
+  }
+};
 
-class OutputRegisterVoteDTO { };
+class OutputRegisterVoteDTO {
+  message = "vote computed";
+
+  constructor({
+    participantId,
+    election
+  }) {
+    this.election = election;
+    this.participantId = participantId;
+  }
+};
 
 module.exports = {
   InputRegisterVoteDTO,
